src/gateway/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
    project: microservices_mp4-to-mp3-converter
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
